add admin endpoint to get list queue and update status queue
