# storage/api-docs/api-docs.json
@@ -6,6 +6,58 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/admin/queue/index/{hospital_id}/{poli_id}": {
+            "get": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "get list queue for admin",
+                "operationId": "profile",
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/v1/admin/queue/update-status": {
+            "post": {
+                "tags": [
+                    "Queue Process"
+                ],
+                "summary": "\n    Update Status Queue\n    const waiting = 0;\n    const checkIn = 1;\n    const checkOut = 2;\n    const skipped = 3;",
+                "operationId": "storequeue",
+                "requestBody": {
+                    "description": "form",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "patient_id": {
+                                        "type": "string"
+                                    },
+                                    "current_status": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/register": {
             "post": {
                 "tags": [
@@ -322,6 +374,20 @@
                     "Queue Process"
                 ],
                 "summary": "get list histories of queue per patient",
+                "operationId": "profile",
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/v1/queue/current": {
+            "get": {
+                "tags": [
+                    "Queue Process"
+                ],
+                "summary": "get current queue patient",
                 "operationId": "profile",
                 "responses": {
                     "default": {
